# bytes-builder-shootout

./: CHANGELOG.md  bytes-builder-shootout.cabal  cabal.project
app/: Main.hs
src-common/Data/Tree/: Byte.hs  ShortText.hs  Word16.hs
src-common/Impl/: ByteString.hs  FastBuilder.hs  Mason.hs  SmallByteArrayBuilder.hs
src-indef/: Builder.hsig  Encode.hs
